--- a/style.css
+++ b/style.css
@@ -6,12 +6,12 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: linear-gradient(to right, #2ef6db, #86e52e);
+  background: linear-gradient(to right, #6AD9FF, #a7f60a);
 
 }
 #crypto-container {
   display: flex;
-  flex-wrap: wrap; /* Ensure wrapping if more than 10 items */
+  flex-wrap: wrap; 
   gap: 20px;
   justify-content: center; /* Center the items horizontally */
 }
@@ -22,26 +22,6 @@ h1, h2 {
   font-weight: 600;
 }
 
-/* Hero Section */
-.hero {
-  background: url('/images/okx.svg') no-repeat center center fixed;
-  background-size: cover;
-  color: white;
-  padding: 150px 0;
-  text-align: center;
-  font-size: 3em;
-  box-shadow: inset 0 0 20px rgba(0,0,0,0.5);
-}
-
-.hero h1 {
-  font-size: 4em;
-}
-
-.hero p {
-  font-size: 1.5em;
-}
-
-/* Profile Card */
 .card-container {
   display: flex;
   justify-content: center;
